--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,7 @@ a.icon {
   z-index: 1;
 }
 
-/* .main-footer {
+.main-footer {
   width: 100%;
   max-width: 1100px;
   height: auto;
@@ -219,7 +219,7 @@ a.icon {
   text-align: center;
   padding: 2em 0;
   background: #f1dfaf;
-} */
+}
 
 
 /******************************
