add a javascript multidimensional array for food items to insert in the Menu section also added css so the send message button is centered in mobile view.

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@ body {
   margin: 0;
   Font-Family: 'Raleway', Sans-Serif;
   Font-Size: 15px;
-  line-height: 1.6;
   /* font-size: calc(.65rem + .5vw); */
   background-color: #fdfaf3;
 
@@ -24,6 +23,19 @@ a {
 
 }
 
+h1,
+h2,
+h3,
+.logo,
+.waiter,
+a {
+  line-height: 1.6;
+}
+
+h4 {
+  line-height: 1;
+}
+
 h2,
 h3 {
   text-align: center;
@@ -31,29 +43,11 @@ h3 {
   text-decoration: underline;
 
 }
-
-h2 {
-  position: relative;
-}
-
-h2 .about {
-  position: absolute;
-  top: -125px;
-}
-
-h4 {
-  position: relative;
-}
-
-h4 .menu {
-  position: absolute;
-  top: -130px;
-}
-
-h4 .contact {
-  position: absolute;
-  top: -130px;
-}
+h2{ position:relative; }
+h2 .about { position:absolute; top:-125px;}
+h4{ position:relative; }
+h4 .menu{ position:absolute; top:-130px;}
+h4 .contact{ position:absolute; top:-130px;}
 
 
 
@@ -129,8 +123,8 @@ p.text-grey {
   margin: 12px 0 12px 18px;
 }
 
-.top,
-.nav li a {
+.top, 
+.nav li a  {
   text-decoration: none;
   color: #2727E2;
   font-size: .95rem;
@@ -156,15 +150,15 @@ a.icon {
   text-decoration: none;
 }
 
-/* position hamburger icon to right of viewport  */
+  /* position hamburger icon to right of viewport  */
 
-.icon {
-  /* display: block; */
-  position: absolute;
-  top: 2rem;
-  left: calc(100vw - 12%);
-  /* right: 2rem; */
-}
+  .icon {
+    /* display: block; */
+    position: absolute;
+    top: 2rem;
+    left: calc(100vw - 12%);
+    /* right: 2rem; */
+  }
 
 .fa-bars {
   color: #c28434;
@@ -188,7 +182,7 @@ a.icon {
   padding: .7em;
   border: solid 1px #d1d0d0;
   border-radius: 0 0 5px 5px;
-
+  
 }
 
 .feat-img {
@@ -223,115 +217,16 @@ a.icon {
 
 }
 
-.opacity-min {
-  opacity: 0.75
-}
-
-
-.row {
+.feat-img-3 {
   width: 100%;
-  max-width: 1100px;
+  max-width: 300px;
   height: auto;
+  padding: .7em;
   margin: 0 auto;
-}
-
-.col {
-
-  padding-right: .5rem;
-  padding-left: .5rem;
-  margin-left: 0;
-  border: 1px solid rgb(224, 195, 31);
-}
-
-
-.navtop {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1;
-}
-
-.primary-1 h4 {
-  line-height: .75;
-}
-
-
-.primary-4 h4 {
-  text-align: center;
-  line-height: 1.4;
-}
-
-
-.primary-4 p::first-line {
-  line-height: 1.6;
-  font-weight: bold;
-
-}
-
-.primary-4 p {
-  color: #706767;
-  line-height: 1;
-}
-
-.text-left {
-  text-align: left !important;
-
-
-}
-
-.contact-banner-text-h2 {
-  text-align: left;
-  font-weight: 900;
-  text-decoration: none;
-}
-
-.contact-banner-text-span {
-  font-size: 15px;
-  Font-Family: 'Raleway',
-    Sans-Serif;
-}
-
-.fa-bread-slice {
-  color: #674023;
-  padding: 0 .5rem 0 .25rem;
-  font-size: 2rem;
-}
-
-.primary-2,
-.primary-3,
-.primary-4 {
-  background: #f8f8f8 url(img/pattern.jpg) left top repeat;
-  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .05) inset,
-    0 -5px 15px 0 rgba(0, 0, 0, .05) inset;
-}
-
-.form-input {
-  padding: 8px;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  width: 100%
-}
-
-.form-button {
-  border: none;
-  padding: 8px 16px;
-  vertical-align: middle;
-  text-decoration: none;
-  text-align: center;
-  cursor: pointer;
-  white-space: nowrap;
-  margin-top: 16px;
-  margin-bottom: 16px;
-  background-color: #a97142;
-}
-
-.form-button:hover {
-  color: #fff;
-  background-color: #1414B0;
+  border: solid 1px #d1d0d0;
   border-radius: 5px;
+
 }
-
-
 
 .padding-8 {
   padding-top: .5rem;
@@ -350,27 +245,26 @@ a.icon {
 
 .padding-top-20 {
   padding-top: 1.25rem;
-}
+ }
 
-.padding-top-24 {
-  padding-top: 1.5rem;
-}
+ .padding-top-24 {
+   padding-top: 1.5rem;
+ }
 
-.padding-top-30 {
-  padding-top: 1.875rem;
-}
+ .padding-top-30 {
+   padding-top: 1.875rem;
+ }
+ .padding-top-32 {
+   padding-top: 2rem;
+ }
+ 
+ .padding-bottom-8 {
+   padding-bottom: 0.5rem;
+ }
 
-.padding-top-32 {
-  padding-top: 2rem;
-}
-
-.padding-bottom-8 {
-  padding-bottom: 0.5rem;
-}
-
-.padding-bottom-16 {
-  padding-bottom: 1rem;
-}
+ .padding-bottom-16 {
+   padding-bottom: 1rem;
+ }
 
 .padding-bottom-20 {
   padding-bottom: 1.25rem;
@@ -388,6 +282,108 @@ a.icon {
   padding-bottom: 2rem;
 }
 
+
+.opacity-min {
+  opacity: 0.75
+}
+
+
+.row {
+  width: 100%;
+  max-width: 1100px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.col {
+  
+  padding-right: .5rem;
+  padding-left: .5rem;
+  margin-left: 0;
+  border: 1px solid rgb(224, 195, 31);
+}
+
+
+.navtop {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1;
+}
+
+
+
+
+.primary-4 h4 {
+  text-align: center;
+  line-height: 1.4;
+}
+
+
+.primary-4 p::first-line {
+  line-height: 1;
+  font-weight: bold;
+  
+}
+.primary-4 p {
+  color: #706767;
+  line-height: 1;
+}
+
+.text-left {
+  text-align: left !important;
+  
+}
+
+.contact-banner-text-h2 {
+  text-align: left;
+  font-weight: 900;
+  text-decoration: none;
+}
+
+.contact-banner-text-span {
+  font-size: 15px;
+  Font-Family: 'Raleway',
+  Sans-Serif;
+}
+
+.fa-bread-slice {
+  color: #674023;
+  padding: 0 .5rem 0 .25rem;
+  font-size: 2rem;
+}
+.primary-2,
+.primary-3,
+.primary-4{
+  background: #f8f8f8 url(img/pattern.jpg) left top repeat;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .05) inset,
+  0 -5px 15px 0 rgba(0, 0, 0, .05) inset;
+}
+.form-input{
+  padding: 8px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  width: 100%
+}
+.form-button {
+  border: none;
+  padding: 8px 16px;
+  vertical-align: middle;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  margin-top: 16px ;
+  margin-bottom: 16px ;
+  background-color: #a97142;
+}
+
+.form-button:hover {
+  color: #fff;
+  background-color: #1414B0;
+  border-radius: 5px;
+}
+
 .main-footer {
   width: 100%;
   max-width: 1100px;
@@ -398,6 +394,64 @@ a.icon {
   background: #f1dfaf;
 }
 
+.padding-8 {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+
+.padding-16 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.padding-20 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.padding-top-20 {
+  padding-top: 1.25rem;
+ }
+
+ .padding-top-24 {
+   padding-top: 1.5rem;
+ }
+
+ .padding-top-30 {
+   padding-top: 1.875rem;
+ }
+ .padding-top-32 {
+   padding-top: 2rem;
+ }
+ 
+ .padding-bottom-8 {
+   padding-bottom: 0.5rem;
+ }
+
+ .padding-bottom-16 {
+   padding-bottom: 1rem;
+ }
+
+.padding-bottom-20 {
+  padding-bottom: 1.25rem;
+}
+
+.padding-bottom-24 {
+  padding-bottom: 1.5rem;
+}
+
+.padding-bottom-30 {
+  padding-bottom: 1.875rem;
+}
+
+.padding-bottom-32 {
+  padding-bottom: 2rem;
+}
+
+ /* This class rule sticks the footer to bottom fo veiwport*/
+ .wrap {
+   min-height: calc(100vh - 110px);
+ }
 
 /******************************
 Flexbox Layout Mobile
@@ -414,7 +468,7 @@ Flexbox Layout Mobile
 
 .header {
   justify-content: space-between;
-
+  
 }
 
 .nav {
@@ -426,24 +480,13 @@ Flexbox Layout Mobile
 
 @media (max-width: 702px) {
 
+  
+  h2 .about{ position:absolute; top: -500px;}
+  h4 .menu{ position:absolute; top: -300px;}
+  h4 .contact{ position:absolute; top:-297px;}
 
-  h2 .about {
-    position: absolute;
-    top: -500px;
-  }
-
-  h4 .menu {
-    position: absolute;
-    top: -300px;
-  }
-
-  h4 .contact {
-    position: absolute;
-    top: -297px;
-  }
-
-
-
+ 
+  
   .nav {
     padding: 12px 0 12px 0;
     margin: 0 0 0 -10px;
@@ -485,12 +528,10 @@ Flexbox Layout Mobile
 
 
   }
-
   .contact-banner-text-span {
-    display: block;
-    padding-left: 3.2rem;
+   display: block;
+   padding-left: 3.2rem;
   }
-
   .feat-img-1 {
     width: 100%;
     max-width: 300px;
@@ -502,12 +543,17 @@ Flexbox Layout Mobile
 
   }
 
+  .form-button {
+   display: block;
+   margin: 0 auto;
+  }
+
 }
 
 
 @media all and (min-width: 703px) {
 
-  /* My original nav layout */
+/* My original nav layout */
   .header,
   .nav {
     flex-direction: row;
@@ -523,10 +569,9 @@ Flexbox Layout Mobile
   .icon {
     display: none;
   }
-
-  .waiter {
-    display: none;
-  }
+   .waiter {
+     display: none;
+   }
 
   .row {
 
@@ -538,7 +583,7 @@ Flexbox Layout Mobile
   }
 
   .col {
-    justify-content: flex-start;
+    justify-content:  flex-start;
     border: 1px solid #222;
   }
 
@@ -548,8 +593,12 @@ Flexbox Layout Mobile
     width: 33.33%;
   }
 
-  .secondary {
+  /* .secondary {
     flex: 1 40%;
+  } */
+
+  .secondary {
+    width: 33.33%;
   }
 
   .tertiary {
@@ -557,30 +606,34 @@ Flexbox Layout Mobile
 
   }
 
-  .primary-1 {
+  /* .primary-1 {
     flex: 50%;
   }
 
   .secondary-1 {
     flex: 50%;
-  }
+  } */
+
+    .primary-1 {
+      width: 50%;
+    }
+
+    .secondary-1 {
+      width: 50%;
+    }
 
   .primary-2 {
     width: 100%;
-  }
+  } 
 
   .primary-3 {
-    flex: 50%;
+   width: 50%;
   }
 
   .primary-4 {
-    flex: 50%;
+    width: 50%;
   }
-
-  /* This class rule sticks the footer to bottom fo veiwport*/
-  .wrap {
-    min-height: calc(100vh - 110px);
-  }
+ 
 
 }
 
@@ -588,12 +641,16 @@ Flexbox Layout Mobile
   .hide-medium {
     display: none;
   }
+  main p h4{
+    text-align:justify;
+  }
+
 }
 
 @media (max-width:1030px) {
-  .foodCart {
-    display: none;
-  }
+    .foodCart {
+      display: none;
+    }
 }
 
 @media all and (min-width: 1030px) {
@@ -602,7 +659,7 @@ Flexbox Layout Mobile
 
   }
 
-
+  
 
   .primary {
     width: 25%;
@@ -625,19 +682,19 @@ Flexbox Layout Mobile
     flex: 40%;
   }
 
-  .primary-2 {
-
-    flex-direction: column;
-    align-items: center;
+  .primary-2{
+    
+     flex-direction: column;
+     align-items: center;
   }
 
-  .primary-3 {
-    flex: 60%;
-  }
+   .primary-3 {
+     flex: 60%;
+   }
 
-  .primary-4 {
-    flex: 40%;
-  }
+   .primary-4 {
+     flex: 40%;
+   }
 
 
 
