--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,10 @@ Base Element Styles
 
 body {
   margin: 0;
-  Font-Family: 'Raleway', Sans-Serif;
-  Font-Size: 15px;
+  font-family: "Raleway", Sans-Serif;
+  font-size: 15px;
   /* font-size: calc(.65rem + .5vw); */
   background-color: #fdfaf3;
-
 }
 
 h1,
@@ -19,8 +18,7 @@ h2,
 h3,
 h4,
 a {
-  Font-Family: 'Vollkorn', Serif;
-
+  font-family: "Vollkorn", Serif;
 }
 
 h1,
@@ -40,8 +38,6 @@ h2,
 h3 {
   text-align: center;
   letter-spacing: 5px;
-  text-decoration: underline;
-
 }
 
 h2 {
@@ -67,27 +63,19 @@ h4 .contact {
   top: -130px;
 }
 
-
-
 h4 {
   font-size: 1.25rem;
   text-align: left;
   letter-spacing: 5px;
 }
 
-
-
 p.text-grey {
   color: #757575;
   font-size: 1.2rem;
 }
 
-p.text-grey:last-child {
-  text-decoration: line-through;
-}
-
 p.text-blue {
-  color: #1414B0;
+  color: #1414b0;
   font-size: 1.2rem;
 }
 
@@ -100,12 +88,11 @@ p.text-blue {
   border: 1px solid red;
 }
 
-
 .logo {
   font-size: 28px;
   font-weight: 900;
-  letter-spacing: .1rem;
-  color: #1414B0;
+  letter-spacing: 0.1rem;
+  color: #1414b0;
   width: 190px;
   background-size: contain;
   white-space: nowrap;
@@ -113,7 +100,6 @@ p.text-blue {
   margin-left: 50px;
   padding-top: 0;
   border: 1px solid greenyellow;
-
 }
 
 .header {
@@ -134,16 +120,13 @@ p.text-blue {
 
 .foodCart {
   position: absolute;
-  top: .3rem;
+  top: 0.3rem;
   right: 32rem;
 }
-
-
 
 .nav {
   list-style: none;
   border: 1px solid yellow;
-
 }
 
 .nav li {
@@ -153,10 +136,10 @@ p.text-blue {
 .top,
 .nav li a {
   text-decoration: none;
-  color: #2727E2;
-  font-size: .95rem;
+  color: #2727e2;
+  font-size: 0.95rem;
   font-weight: 600;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   text-transform: uppercase;
   padding: 8px 16px 7px;
 }
@@ -171,7 +154,6 @@ p.text-blue {
 .nav li:last-child {
   margin-right: 5px;
 }
-
 
 a.icon {
   text-decoration: none;
@@ -189,14 +171,13 @@ a.icon {
 
 .fa-bars {
   color: #c28434;
-  padding: .15rem;
+  padding: 0.15rem;
   border: solid 1px #afa6a6;
   font-size: 25px;
 }
 
-
 .fa-bars:hover {
-  background-color: #FB8804;
+  background-color: #fb8804;
   color: black;
 }
 
@@ -206,59 +187,53 @@ a.icon {
   max-width: 1100px;
   height: auto;
   margin: 0 auto;
-  padding: .7em;
+  padding: 0.7em;
   border: solid 1px #d1d0d0;
   border-radius: 0 0 5px 5px;
-
 }
 
 .feat-img {
   width: 100%;
   max-width: 600px;
   height: auto;
-  padding: .7em;
+  padding: 0.7em;
   border: solid 1px #d1d0d0;
   border-radius: 5px;
-
 }
 
 .feat-img-1 {
   width: 100%;
   max-width: 500px;
   height: auto;
-  padding: .7em;
+  padding: 0.7em;
   margin: 0 auto;
   border: solid 1px #d1d0d0;
   border-radius: 5px;
-
 }
 
 .feat-img-2 {
   width: 100%;
   max-width: 300px;
   height: auto;
-  padding: .7em;
+  padding: 0.7em;
   margin: 0 auto;
   border: solid 1px #d1d0d0;
   border-radius: 5px;
-
 }
 
 .feat-img-3 {
   width: 100%;
   max-width: 300px;
   height: auto;
-  padding: .7em;
+  padding: 0.7em;
   margin: 0 auto;
   border: solid 1px #d1d0d0;
   border-radius: 5px;
-
 }
 
 .opacity-min {
-  opacity: 0.75
+  opacity: 0.75;
 }
-
 
 .row {
   width: 100%;
@@ -268,13 +243,11 @@ a.icon {
 }
 
 .col {
-
-  padding-right: .5rem;
-  padding-left: .5rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
   margin-left: 0;
   border: 1px solid rgb(224, 195, 31);
 }
-
 
 .navtop {
   position: fixed;
@@ -283,19 +256,14 @@ a.icon {
   z-index: 1;
 }
 
-
-
-
 .contact-form-section-picture h4 {
   text-align: center;
   line-height: 1.4;
 }
 
-
 .contact-form-section-picture p::first-line {
   line-height: 1;
   font-weight: bold;
-
 }
 
 .contact-form-section-picture p {
@@ -305,7 +273,6 @@ a.icon {
 
 .text-left {
   text-align: left !important;
-
 }
 
 .contact-banner-text-h2 {
@@ -316,13 +283,12 @@ a.icon {
 
 .contact-banner-text-span {
   font-size: 15px;
-  Font-Family: 'Raleway',
-    Sans-Serif;
+  font-family: "Raleway", Sans-Serif;
 }
 
 .fa-bread-slice {
   color: #674023;
-  padding: 0 .5rem 0 .25rem;
+  padding: 0 0.5rem 0 0.25rem;
   font-size: 2rem;
 }
 
@@ -330,15 +296,15 @@ a.icon {
 .contact-form-section,
 .contact-form-section-picture {
   background: #f8f8f8 url(img/pattern.jpg) left top repeat;
-  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .05) inset,
-    0 -5px 15px 0 rgba(0, 0, 0, .05) inset;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.05) inset,
+    0 -5px 15px 0 rgba(0, 0, 0, 0.05) inset;
 }
 
 .form-input {
   padding: 8px;
   border: none;
   border-bottom: 1px solid #ccc;
-  width: 100%
+  width: 100%;
 }
 
 .form-button {
@@ -356,7 +322,7 @@ a.icon {
 
 .form-button:hover {
   color: #fff;
-  background-color: #1414B0;
+  background-color: #1414b0;
   border-radius: 5px;
 }
 
@@ -371,8 +337,8 @@ a.icon {
 }
 
 .padding-8 {
-  padding-top: .5rem;
-  padding-bottom: .5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .padding-16 {
@@ -434,7 +400,6 @@ a.icon {
 Flexbox Layout Mobile
 *******************************/
 
-
 .header,
 .nav,
 .row,
@@ -445,7 +410,6 @@ Flexbox Layout Mobile
 
 .header {
   justify-content: space-between;
-
 }
 
 .nav {
@@ -453,11 +417,7 @@ Flexbox Layout Mobile
   justify-content: space-around;
 }
 
-
-
 @media (max-width: 702px) {
-
-
   h2 .about {
     position: absolute;
     top: -500px;
@@ -473,19 +433,15 @@ Flexbox Layout Mobile
     top: -297px;
   }
 
-
-
   .nav {
     padding: 12px 0 12px 0;
     margin: 0 0 0 -10px;
-
   }
 
   .nav li a:hover {
     border-radius: 5px;
     transition: 400ms ease-in-out;
   }
-
 
   .nav.responsive {
     display: none;
@@ -494,8 +450,6 @@ Flexbox Layout Mobile
   .waiter.responsiveB {
     display: none;
   }
-
-
 
   .imgResponse {
     display: none;
@@ -507,14 +461,11 @@ Flexbox Layout Mobile
 
   .col-top {
     margin-top: 22rem;
-
   }
 
-  /* This responsiveA is control by javascript  */
+  /* This responsiveA is controlled by javascript when hamburger is onclicked */
   .col-top.responsiveA {
     margin-top: 8rem;
-
-
   }
 
   .contact-banner-text-span {
@@ -526,23 +477,19 @@ Flexbox Layout Mobile
     width: 100%;
     max-width: 300px;
     height: auto;
-    padding: .7em;
+    padding: 0.7em;
     margin: 0 auto;
     border: solid 1px #d1d0d0;
     border-radius: 5px;
-
   }
 
   .form-button {
     display: block;
     margin: 0 auto;
   }
-
 }
 
-
 @media all and (min-width: 703px) {
-
   /* My original nav layout */
   .header,
   .nav {
@@ -555,7 +502,6 @@ Flexbox Layout Mobile
     align-items: center;
   } */
 
-
   .icon {
     display: none;
   }
@@ -565,12 +511,10 @@ Flexbox Layout Mobile
   }
 
   .row {
-
     flex-direction: row;
     /* flex-wrap: wrap; */
     /* flex-flow: row wrap; */
     /* justify-content: space-between; */
-
   }
 
   .col {
@@ -599,7 +543,7 @@ Flexbox Layout Mobile
     width: 50%;
   }
 
-  .banner-section{
+  .banner-section {
     width: 100%;
   }
 
@@ -610,10 +554,9 @@ Flexbox Layout Mobile
   .contact-form-section-picture {
     width: 50%;
   }
-
 }
 
-@media (max-width:992px) and (min-width:701px) {
+@media (max-width: 992px) and (min-width: 701px) {
   .hide-medium {
     display: none;
   }
@@ -621,10 +564,9 @@ Flexbox Layout Mobile
   main p h4 {
     text-align: justify;
   }
-
 }
 
-@media (max-width:1030px) {
+@media (max-width: 1030px) {
   .foodCart {
     display: none;
   }
@@ -646,7 +588,6 @@ Flexbox Layout Mobile
 
   .about-section-content-picture {
     width: 25%;
-
   }
 
   .menu-section-content {
@@ -659,7 +600,6 @@ Flexbox Layout Mobile
   }
 
   .banner-section {
-
     flex-direction: column;
     align-items: center;
   }
@@ -671,7 +611,6 @@ Flexbox Layout Mobile
   .contact-form-section-picture {
     flex: 40%;
   }
-
 }
 
 /* justify-content: space-between for new nav bar*/
